--- a/patches/Makefile.patch
+++ b/patches/Makefile.patch
@@ -13,3 +13,11 @@
 > 	-gencode=arch=compute_70,code=sm_70 \ 
 > 	-gencode=arch=compute_75,code=sm_75 \
 > 	-gencode=arch=compute_75,code=compute_75
+16,20c16
+< ARCH= -gencode arch=compute_30,code=sm_30 \
+<       -gencode arch=compute_35,code=sm_35 \
+<       -gencode arch=compute_50,code=[sm_50,compute_50] \
+<       -gencode arch=compute_52,code=[sm_52,compute_52] \
+< 	  -gencode arch=compute_61,code=[sm_61,compute_61]
+---
+> ARCH= -gencode arch=compute_61,code=sm_61 -gencode arch=compute_61,code=compute_61
